# distributional-jump-bridges

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: main.yaml  paper.yaml  paper_v2.yaml  paper_v3.yaml  paper_v3_bge.yaml  paper_v3_bge_djb.yaml  paper_v3_bge_ejssm.yaml  paper_v3_bge_ff4.yaml  paper_v3_bge_rc_djb.yaml  paper_v3_bge_rc_djb_t010.yaml  paper_v3_dot.yaml  paper_v3_ejssm.yaml  paper_v3_rank.yaml  pilot.yaml
configs/experiments/: djb_ff4_replication_sweeps.yaml  djb_replication_sweeps.yaml
configs/model/: cebt_h200.yaml  cebt_small.yaml  djb_bge_small.yaml  djb_bge_small_t010.yaml  dot_small.yaml  ejssm_bge_small.yaml  ejssm_small.yaml
data/: README.md
docs/: README.md  arxiv_metadata.md  disclosure_operator_transformer.md  event_jump_state_space.md  literature.md  main.tex  paper_outline.md  references.bib  research_plan.md
docs/tables/: table_paired_rank_ic_comparisons.csv  table_rank_temperature_sensitivity.csv  tables_summary.json
paper/: README.md  arxiv_metadata.md  main.tex  references.bib
paper/tables/: table_ejssm_bge_intervention_paired.csv  table_ejssm_bge_interventions.csv  table_eval_metrics.csv  table_paired_mse_comparisons.csv  table_paired_rank_ic_comparisons.csv  table_rc_djb_intervention_paired.csv  table_rc_djb_interventions.csv  table_residual_diagnostics.csv
scripts/: 00_smoke.py  10_build_events.py  20_download_prices.py  30_build_features.py  40_train.py  50_eval.py  60_ablate.py  70_make_tables.py  80_make_rc_djb_figures.py  85_make_paper_tables.py  90_djb_replication_sweeps.py
src/cebt/: __init__.py  cli.py
src/cebt/analysis/: figures.py  (+1 more)
tests/: test_bootstrap_and_tables.py  test_config.py  test_embeddings.py  test_evaluation_leakage.py  test_factors.py  test_feature_builder.py  test_model_and_loss.py  test_time_rules.py  test_training_smoke.py
(+18 files in other folders)
