[project]
name = "cebt"
version = "0.1.0"
description = "Counterfactual Event Bottleneck Transformer for leakage-safe financial event modeling"
requires-python = ">=3.11,<3.13"
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "requests>=2.32",
  "torch>=2.3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=3.0",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
